@@ -1,4 +1,4 @@
-rev 13-Apr_29-17_30
+rev 13-May_04-08_14
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -204,3 +204,7 @@ In edit.php fix for images with detail urls using .htaccess nice urls
 29 April
 Fixed regex for recognizing indented code blocks.
 Fixed handlng of footnotes containing parentheses.
+
+3 May
+Synced switch/edit.php with master/edit.php
+Added support for ~~NOTOC~~ macro
